[modify] prod環境下でd.tsを吐かないように修正

--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -4,6 +4,9 @@
   "compilerOptions": {
     "incremental": true,
     "declarationMap": false,
-    "sourceMap": false
+    "sourceMap": false,
+    "composite": false,
+    "declarationDir": null,
+    "declaration": false
   }
 }
